--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.1",
+    "nodemailer-express-handlebars": "^6.0.0",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^19.4.1"
   },
