--- a/Scraper/package.json
+++ b/Scraper/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.4",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.1",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^19.4.1"
   },
