--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,12 +15,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-handlebars": "^7.0.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
-    "nodemailer-express-handlebars": "^6.0.0",
+    "nodemailer-express-handlebars": "^6.1.0",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^19.4.1"
   },
