--- a/Scraper/process.env
+++ b/Scraper/process.env
@@ -1,10 +1,10 @@
-PASSWORD =ashuashu
+PASSWORD =mLKQBgiaXXUOtO7D
 PORT=3000
 JWT_SECRET = HELOOABHUSHEK%%;
 
 link=http://localhost:5000
 
-mongoURI = mongodb+srv://abhishek_1212:ashuashu@cluster0.nhsofb8.mongodb.net/PriceComporator?retryWrites=true&w=majority
+mongoURI = mongodb+srv://abhishek_1212:mLKQBgiaXXUOtO7D@cluster0.nhsofb8.mongodb.net/PriceComporator?retryWrites=true&w=majority
 # password of mail---
 user= scraptit007@gmail.com
 pass= ivaoilojraglvelc
